tied in new front-end design and published branch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <label class="form-objects" for="location">Where is your bubble?<br><p>(Where're ya from?)</p></label> 
       <input class="form-objects" type="text" name="location">
       <button class="form-objects">Get Out Of Your Bubble</button>
-      <script src="js/scripts.js"></script>
+      <script src="js/scripts1.js"></script>
     </div>
     <!-- <div class="bubble"></div> -->
   </div>
