redid front end for fit

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="master-grid">
-    <div class="form-container">
-      <label class="form-objects" for="location">Where is your bubble?<br><p>(Where're ya from?)</p></label> 
-      <input class="form-objects" type="text" name="location">
+    <div class="form-container bubble">
+      <!-- <label class="form-objects" for="location">Where is your bubble?<br><p>(Where're ya from?)</p></label> 
+      <input class="form-objects" type="text" name="location"> -->
       <button class="form-objects">Get Out Of Your Bubble</button>
       <script type="module" src="js/scripts1.js"></script>
     </div>
